fix: spacing

--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -327,6 +327,11 @@
         padding: 1rem;
     }
 
+    .right {
+        width: 100%;
+        justify-content: center;
+    }
+
     .dashboard_container {
         padding: 5px;
     }
